style/about.css
/* ... */
/*  *********************** Containers Wrapper *********************** */
.containers_wrapper {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    padding: 10px;
    height: auto;
    flex-direction: row; 
}
@media screen and (max-width: 480px) {
    .containers_wrapper {
        flex-direction: column; 
        margin-top: 60%;
        height: auto;
        width: 96%;
    }
}
@media screen and (min-width: 481px) {
    .containers_wrapper {
        flex-direction: row; 
        margin-top: 15%;
    }
}


/*  *********************** Soft Skills Container*********************** */
.softSkills_container {
    background-color: black;
    width: 100%;
    height: 220px;
    box-shadow: 0 0 15px 5px rgba(255, 255, 255, 0.5); 
    transition: box-shadow 0.3s, transform 0.3s;
    display: flex; 
    flex-wrap: wrap; 
    border-radius: 30px;
    animation: fadeInText 5s ease forwards;
}
@media screen and (max-width: 480px) {
    .softSkills_container {
        flex-direction: column; 
        width: 90%; 
        height: auto; 
    }
}
@media screen and (min-width: 481px) {
    .softSkills_container {
        flex-direction: row; 
        justify-content: center;
        align-items: center;
        margin-left: 10%;
        margin-right: 10%;
    }
}

.coursework_container {
    background-color: black;
    width: 100%;
    height: 220px;
    box-shadow: 0 0 15px 5px rgba(255, 255, 255, 0.5); 
    transition: box-shadow 0.3s, transform 0.3s;
    display: flex; 
    flex-wrap: wrap; 
    border-radius: 30px;
    animation: fadeInText 5s ease forwards;
}
@media screen and (max-width: 480px) {
    .coursework_container {
        flex-direction: column; 
        width: 90%; 
        height: auto; 
        margin-top: 10%;
    }
}
@media screen and (min-width: 481px) {
    .coursework_container {
        flex-direction: row; 
        justify-content: center;
        align-items: center;
        margin-left: 10%;
        margin-right: 10%;
    }
}

.softSkillsContent_wrapper {
    margin-top: -12%;
}


/*  *********************** Tab Wrapper *********************** */
.tab_wrapper {
    display: flex;
    justify-content: space-around; 
    flex-wrap: wrap; 
    width: 100%; 
    padding: 10px;
}
@media screen and (max-width: 480px) {
    .tab_wrapper {
        margin-top: 40%;
        margin-left: 18%;
        height: auto;
    }
}
@media screen and (min-width: 481px) {
    .tab_wrapper {
        margin-top: 15%;
        margin-left: 8%;
    }
}

/*  *********************** Soft Skills Tab *********************** */
.softSkills_tab {
    padding: 0px;
    text-align: center;
    justify-content: center;
    border: 3px solid black;
    border-radius: 30px;
    background-color: black;
    box-shadow: 0 0 8px 1.5px lightgray;
    cursor: pointer;
    transition: transform .5s ease;
    animation: fadeInText 10s ease forwards, floating 2s infinite alternate;
}
@media screen and (max-width: 480px) {
    .softSkills_tab {
        font-size: 20px;
        width: 20%;
        height: auto;
        margin-top: 12%;
        text-align: center;
    }
}
@media screen and (min-width: 481px) {
    .softSkills_tab {
        width: 270px;
        height: auto;
        margin-left: 50%;
        margin-top: 6%;
    }
}
@keyframes fadeInText {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}
@keyframes floating {
    0% {
        transform: translate(-50%, -50%) translateY(0);
    }
    100% {
        transform: translate(-50%, -50%) translateY(-10px);
    }
}
.softSkills_tab:hover {
    transform: translate(-50%, -50%) rotate(360deg); 
    box-shadow: 2px 2px 5px 2px lightgray;
}

/*  *********************** Coursework Tab *********************** */
.coursework_tab {
    padding: 0px;
    text-align: center;
    justify-content: center;
    border: 3px solid black;
    border-radius: 30px;
    background-color: black;
    box-shadow: 0 0 8px 1.5px lightgray;
    cursor: pointer;
    transition: transform .5s ease;
    animation: fadeInText 10s ease forwards, floating 2s infinite alternate;
}
@media screen and (max-width: 480px) {
    .coursework_tab {
        width: 25%;
        height: auto;
        text-align: center;
        font-size: 20px;
        margin-top: 12%;
        margin-left: auto;
        margin-right: auto;
    }
}
@media screen and (min-width: 481px) {
    .coursework_tab {
        width: 270px;
        height: auto;
        margin-left: 50%;
        margin-top: -23.4%;
    }
}
@keyframes fadeInText {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}
@keyframes floating {
    0% {
        transform: translate(-50%, -50%) translateY(0);
    }
    100% {
        transform: translate(-50%, -50%) translateY(-10px);
    }
}
.coursework_tab:hover {
    transform: translate(-50%, -50%) rotate(360deg); 
    box-shadow: 2px 2px 5px 2px lightgray;
}

